--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </section>
 
-    <div class="slider">
+    <!-- <div class="slider">
       <div class="buttons">
         <button class="btn-next" id="next">
           <svg
@@ -103,7 +103,7 @@
 
         <div class="item" style="background-image: url(/img-1.jpg)"></div>
       </div>
-    </div>
+    </div> -->
 
     <footer></footer>
     <script src="/src/app.js"></script>
