--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </nav>
     </header>
     <section class="hero container">
+      <img class="hero__logo" src="/logo.png" alt="Logo image" />
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">Transporting Exotic and Luxury Vehicles</h1>
         <p class="hero__tagline-s">
