--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Dev server</title>
   </head>
   <body>
-    <header class="header container">
+    <header class="header">
       <div class="header__left-container">
         <img class="header__logo" src="/logo.png" alt="Logo image" />
         <div class="header__text-container">
