--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       </nav>
     </header>
     <section class="hero container">
-      <img class="hero__logo" src="/logo.png" alt="Logo image" />
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">Transporting Exotic and Luxury Vehicles</h1>
         <p class="hero__tagline-s">
@@ -62,7 +61,7 @@
       </div>
     </section>
 
-    <!-- <div class="slider">
+    <div class="slider">
       <div class="buttons">
         <button class="btn-next" id="next">
           <svg
@@ -91,20 +90,42 @@
           </svg>
         </button>
       </div>
-      <div id="slide">
-        <div class="item" style="background-image: url(/img-1.jpg)"></div>
+    </div>
 
-        <div class="item" style="background-image: url(/img-1.jpg)"></div>
-
-        <div class="item" style="background-image: url(/img-1.jpg)"></div>
-
-        <div class="item" style="background-image: url(/img-1.jpg)"></div>
-
-        <div class="item" style="background-image: url(/img-1.jpg)"></div>
-
-        <div class="item" style="background-image: url(/img-1.jpg)"></div>
+    <div class="slider" style="--width: 300px; --height: 300px; --quantity: 10">
+      <div class="list">
+        <div class="item" style="--position: 1">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 2">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 3">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 4">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 5">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 6">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 7">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 8">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 9">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 10">
+          <img src="/img-1.jpg" alt="" />
+        </div>
       </div>
-    </div> -->
+    </div>
 
     <footer></footer>
     <script src="/src/app.js"></script>
