--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </nav>
     </header>
     <section class="hero container">
+      <img class="hero__logo" src="/logo.png" alt="Logo image" />
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">Transporting Exotic and Luxury Vehicles</h1>
         <p class="hero__tagline-s">
@@ -61,38 +62,46 @@
       </div>
     </section>
 
-    <div class="slider">
-      <div class="buttons">
-        <button class="btn-next" id="next">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-4.28 9.22a.75.75 0 0 0 0 1.06l3 3a.75.75 0 1 0 1.06-1.06l-1.72-1.72h5.69a.75.75 0 0 0 0-1.5h-5.69l1.72-1.72a.75.75 0 0 0-1.06-1.06l-3 3Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </button>
-        <button class="btn-prev" id="prev">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm4.28 10.28a.75.75 0 0 0 0-1.06l-3-3a.75.75 0 1 0-1.06 1.06l1.72 1.72H8.25a.75.75 0 0 0 0 1.5h5.69l-1.72 1.72a.75.75 0 1 0 1.06 1.06l3-3Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </button>
+    <div class="slider" style="--width: 300px; --height: 200px; --quantity: 10">
+      <div class="list">
+        <div class="item" style="--position: 1">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 2">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 3">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 4">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 5">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 6">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 7">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 8">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 9">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 10">
+          <img src="/img-1.jpg" alt="" />
+        </div>
       </div>
     </div>
 
-    <div class="slider" style="--width: 300px; --height: 300px; --quantity: 10">
+    <div
+      class="slider"
+      reverse="true"
+      style="--width: 300px; --height: 200px; --quantity: 10"
+    >
       <div class="list">
         <div class="item" style="--position: 1">
           <img src="/img-1.jpg" alt="" />
