--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <section class="hero container">
       <!-- <img class="hero__logo" src="/logo.png" alt="Logo image" /> -->
       <div class="hero__tagline">
-        <h1 class="hero__tagline-l">Transporting Exotic and Luxury Vehicles</h1>
+        <h1 class="hero__tagline-l">
+          Transporting Exclusive and Luxury Vehicles
+        </h1>
         <p class="hero__tagline-s">
           With <span>Unmatched Dedication</span> to Continuous Improvement and
           <span>Customer Satisfaction.</span>
