--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <div class="slider" style="--width: 300px; --height: 200px; --quantity: 10">
+    <div class="slider" style="--width: 350px; --height: 250px; --quantity: 10">
       <div class="list">
         <div class="item" style="--position: 1">
           <img src="/img-1.jpg" alt="" />
@@ -102,8 +102,43 @@
     <div
       class="slider"
       reverse="true"
-      style="--width: 300px; --height: 200px; --quantity: 10"
+      style="--width: 350px; --height: 250px; --quantity: 10"
     >
+      <div class="list">
+        <div class="item" style="--position: 1">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 2">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 3">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 4">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 5">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 6">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 7">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 8">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 9">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+        <div class="item" style="--position: 10">
+          <img src="/img-1.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <div class="slider" style="--width: 350px; --height: 250px; --quantity: 10">
       <div class="list">
         <div class="item" style="--position: 1">
           <img src="/img-1.jpg" alt="" />
