--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       </nav>
     </header>
     <section class="hero container">
-      <!-- <img class="hero__logo" src="/logo.png" alt="Logo image" /> -->
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">
           Transporting Exclusive and Luxury Vehicles
@@ -65,6 +64,7 @@
     </section>
 
     <div class="slider__container">
+      <img class="hero__logo" src="/logo.png" alt="Logo image" />
       <div
         class="slider"
         style="--width: 150px; --height: 100px; --quantity: 10"
