--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <section class="hero container">
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">
-          Transporting Exclusive and Luxury Vehicles
+          Transporting <span>Exclusive</span> <br />
+          and <span>Luxury</span> Vehicles
         </h1>
         <p class="hero__tagline-s">
           With <span>Unmatched Dedication</span> to Continuous Improvement and
@@ -67,7 +68,7 @@
     </section>
 
     <div class="slider__container">
-      <img class="hero__logo" src="/logo.png" alt="Logo image" />
+      <!-- <img class="hero__logo" src="/logo.png" alt="Logo image" /> -->
       <div
         class="slider"
         style="--width: 150px; --height: 100px; --quantity: 10"
