--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           and <span>Luxury</span> Vehicles
         </h1>
         <p class="hero__tagline-s">
-          With <span>Unmatched Dedication</span> to Continuous Improvement and
+          With Unmatched Dedication to Continuous Improvement and
           <span>Customer Satisfaction.</span>
         </p>
         <a class="hero__btn btn" href="about">About</a>
