--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
     <section class="hero container">
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">
-          Transporting <span>Exclusive</span> <br />
-          and <span>Luxury</span> Vehicles
+          Transporting Exclusive and Luxury Vehicles
         </h1>
         <p class="hero__tagline-s">
-          With Unmatched Dedication to Continuous Improvement and
+          With <span>Unmatched Dedication</span> to Continuous Improvement and
           <span>Customer Satisfaction.</span>
         </p>
         <a class="hero__btn btn" href="about">About</a>
