--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="hero container">
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">
-          Transporting Exclusive and Luxury Vehicles
+          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
         </h1>
         <p class="hero__tagline-s">
           With <span>Unmatched Dedication</span> to Continuous Improvement and
