--- a/index.html
+++ b/index.html
@@ -53,6 +53,123 @@
         </button>
       </nav>
     </header>
+
+    <div class="slider__container">
+      <!-- <img class="hero__logo" src="/logo.png" alt="Logo image" /> -->
+      <div
+        class="slider"
+        style="--width: 250px; --height: 220px; --quantity: 10"
+      >
+        <div class="list">
+          <div class="item" style="--position: 1">
+            <img src="/public/imgs/img5.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 2">
+            <img src="/public/imgs/img3.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 3">
+            <img src="/public/imgs/img1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 4">
+            <img src="/public/imgs/img5.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 5">
+            <img src="/public/imgs/img8.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 6">
+            <img src="/public/imgs/img8.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 7">
+            <img src="/public/imgs/img7.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 8">
+            <img src="/public/imgs/img8.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 9">
+            <img src="/public/imgs/img9.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 10">
+            <img src="/public/imgs/img10.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div
+        class="slider"
+        reverse="true"
+        style="--width: 250px; --height: 220px; --quantity: 10"
+      >
+        <div class="list">
+          <div class="item" style="--position: 1">
+            <img src="/public/imgs/img10.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 2">
+            <img src="/public/imgs/img9.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 3">
+            <img src="/public/imgs/img8.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 4">
+            <img src="/public/imgs/img7.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 5">
+            <img src="/public/imgs/img6.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 6">
+            <img src="/public/imgs/img5.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 7">
+            <img src="/public/imgs/img4.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 8">
+            <img src="/public/imgs/img3.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 9">
+            <img src="/public/imgs/img2.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 10">
+            <img src="/public/imgs/img1.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- <div
+        class="slider"
+        style="--width: 250px; --height: 220px; --quantity: 10"
+      >
+        <div class="list">
+          <div class="item" style="--position: 1">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 2">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 3">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 4">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 5">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 6">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 7">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 8">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 9">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 10">
+            <img src="/img-1.jpg" alt="" />
+          </div>
+        </div>
+      </div> -->
+    </div>
     <section class="hero container">
       <div class="hero__tagline">
         <h1 class="hero__tagline-l">
@@ -65,124 +182,6 @@
         <a class="hero__btn btn" href="about">About</a>
       </div>
     </section>
-
-    <div class="slider__container">
-      <!-- <img class="hero__logo" src="/logo.png" alt="Logo image" /> -->
-      <div
-        class="slider"
-        style="--width: 350px; --height: 220px; --quantity: 10"
-      >
-        <div class="list">
-          <div class="item" style="--position: 1">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 2">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 3">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 4">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 5">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 6">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 7">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 8">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 9">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 10">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-      <div
-        class="slider"
-        reverse="true"
-        style="--width: 350px; --height: 220px; --quantity: 10"
-      >
-        <div class="list">
-          <div class="item" style="--position: 1">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 2">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 3">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 4">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 5">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 6">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 7">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 8">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 9">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 10">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="slider"
-        style="--width: 350px; --height: 220px; --quantity: 10"
-      >
-        <div class="list">
-          <div class="item" style="--position: 1">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 2">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 3">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 4">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 5">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 6">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 7">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 8">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 9">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 10">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </div>
-
     <footer></footer>
     <script src="/src/app.js"></script>
     <script type="module" src="./src/main.js"></script>
