--- a/index.html
+++ b/index.html
@@ -55,29 +55,28 @@
     </header>
 
     <div class="slider__container">
-      <!-- <img class="hero__logo" src="/logo.png" alt="Logo image" /> -->
       <div
         class="slider"
         style="--width: 200px; --height: 175px; --quantity: 10"
       >
         <div class="list">
           <div class="item" style="--position: 1">
-            <img src="/public/imgs/img5.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 2">
-            <img src="/public/imgs/img3.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 3">
             <img src="/public/imgs/img1.jpg" alt="" />
           </div>
+          <div class="item" style="--position: 2">
+            <img src="/public/imgs/img2.jpg" alt="" />
+          </div>
+          <div class="item" style="--position: 3">
+            <img src="/public/imgs/img3.jpg" alt="" />
+          </div>
           <div class="item" style="--position: 4">
-            <img src="/public/imgs/img5.jpg" alt="" />
+            <img src="/public/imgs/img4.jpg" alt="" />
           </div>
           <div class="item" style="--position: 5">
-            <img src="/public/imgs/img8.jpg" alt="" />
+            <img src="/public/imgs/img5.jpg" alt="" />
           </div>
           <div class="item" style="--position: 6">
-            <img src="/public/imgs/img8.jpg" alt="" />
+            <img src="/public/imgs/img6.jpg" alt="" />
           </div>
           <div class="item" style="--position: 7">
             <img src="/public/imgs/img7.jpg" alt="" />
@@ -131,44 +130,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div
-        class="slider"
-        style="--width: 250px; --height: 220px; --quantity: 10"
-      >
-        <div class="list">
-          <div class="item" style="--position: 1">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 2">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 3">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 4">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 5">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 6">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 7">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 8">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 9">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-          <div class="item" style="--position: 10">
-            <img src="/img-1.jpg" alt="" />
-          </div>
-        </div>
-      </div> -->
     </div>
     <section class="hero container">
       <div class="hero__tagline">
@@ -182,6 +143,24 @@
         <a class="hero__btn btn" href="about">About</a>
       </div>
     </section>
+
+    <section class="about">
+      <img class="about__img" src="/public/imgs/img13.jpg" alt="Logo image" />
+      <div class="about__tagline">
+        <p class="hero__tagline1">
+          We have a large fleet of enclosed and open auto carriers, specialize
+          in quick and reliable vehicle transportation across the U.S. and
+          Canada.
+        </p>
+        <!-- <p class="hero__tagline2">
+          Additionally, we have a unique focus on transporting engineering and
+          prototype vehicles. We also have extensive experience in moving
+          autonomous vehicles, ensuring their safe and efficient delivery.
+        </p> -->
+        <a class="hero__btn btn" href="contact">Contact</a>
+      </div>
+    </section>
+
     <footer></footer>
     <script src="/src/app.js"></script>
     <script type="module" src="./src/main.js"></script>
