--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
     </header>
     <!-- header ends -->
 
+    <!-- hero starts -->
+    <section class="hero container">
+      <div class="hero__text">
+        <h1 class="hero__text1">
+          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
+        </h1>
+
+        <p class="hero__text2">
+          With <span>Unmatched Dedication</span> to Continuous Improvement and
+          <span>Customer Satisfaction.</span>
+        </p>
+        <a class="hero__btn1 btn" href="contact">Explore</a>
+        <a class="hero__btn2 btn" href="contact">Contact Us</a>
+      </div>
+      <!-- <img class="hero__logo" src="/public/logo.png" alt="" /> -->
+    </section>
+    <!-- hero ends -->
+
     <!-- slider starts -->
     <div class="slider__container">
       <div
@@ -62,34 +80,34 @@
       >
         <div class="slider__list">
           <div class="slider__item" style="--position: 1">
-            <img src="/public/imgs/img1.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 2">
-            <img src="/public/imgs/img2.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 3">
-            <img src="/public/imgs/img3.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 4">
             <img src="/public/imgs/img4.jpg" alt="" />
           </div>
-          <div class="slider__item" style="--position: 5">
+          <div class="slider__item" style="--position: 2">
             <img src="/public/imgs/img5.jpg" alt="" />
           </div>
-          <div class="slider__item" style="--position: 6">
+          <div class="slider__item" style="--position: 3">
             <img src="/public/imgs/img6.jpg" alt="" />
           </div>
-          <div class="slider__item" style="--position: 7">
+          <div class="slider__item" style="--position: 4">
             <img src="/public/imgs/img7.jpg" alt="" />
           </div>
-          <div class="slider__item" style="--position: 8">
+          <div class="slider__item" style="--position: 5">
             <img src="/public/imgs/img8.jpg" alt="" />
           </div>
-          <div class="slider__item" style="--position: 9">
+          <div class="slider__item" style="--position: 6">
             <img src="/public/imgs/img9.jpg" alt="" />
           </div>
-          <div class="slider__item" style="--position: 10">
+          <div class="slider__item" style="--position: 7">
             <img src="/public/imgs/img10.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 8">
+            <img src="/public/imgs/img1.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 9">
+            <img src="/public/imgs/img2.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 10">
+            <img src="/public/imgs/img11.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -133,23 +151,6 @@
       </div>
     </div>
     <!-- slider ends -->
-
-    <!-- hero starts -->
-    <section class="hero container">
-      <div class="hero__text">
-        <h1 class="hero__text1">
-          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
-        </h1>
-
-        <p class="hero__text2">
-          With <span>Unmatched Dedication</span> to Continuous Improvement and
-          <span>Customer Satisfaction.</span>
-        </p>
-        <a class="hero__btn btn" href="contact">Contact</a>
-      </div>
-      <!-- <img class="hero__logo" src="/public/logo.png" alt="" /> -->
-    </section>
-    <!-- hero ends -->
 
     <!-- about starts -->
     <!-- <section class="about container">
