--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <span>Customer Satisfaction.</span>
         </p>
       </div>
-      <a class="hero__btn1 btn" href="contact">Explore</a>
+      <a class="hero__btn1 btn" href="contact">About Company</a>
       <a class="hero__btn2 btn" href="contact">Contact Us</a>
       <!-- <img class="hero__logo" src="/public/logo.png" alt="" /> -->
     </section>
