--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <span>Customer Satisfaction.</span>
         </p>
       </div>
-      <a class="hero__btn1 btn" href="contact">About Company</a>
-      <a class="hero__btn2 btn" href="contact">Contact Us</a>
+      <a class="hero__btn1 btn" href="contact">Learn More</a>
+      <a class="hero__btn2 btn" href="about">Contact Us</a>
       <!-- <img class="hero__logo" src="/public/logo.png" alt="" /> -->
     </section>
     <!-- hero ends -->
@@ -153,13 +153,63 @@
     <!-- slider ends -->
 
     <!-- about starts -->
-    <!-- <section class="about container">
-      <div class="about__img-container">
+    <section class="about container">
+      <!-- <div class="about__img-container">
         <img src="/public/imgs/img9.jpg" alt="" />
+      </div> -->
+      <div class="about__card">
+        <div class="card__icon icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+            />
+          </svg>
+        </div>
+
+        <div class="card__text">
+          <h2 class="card__text1">Quick and Reliable</h2>
+          <p class="card__text2">
+            With our large fleet of enclosed and open auto carriers, we provide
+            quick and reliable vehicle transportation across the U.S. and
+            Canada.
+          </p>
+        </div>
       </div>
-      <p class="about__text1"></p>
-      <p class="about__text1"></p>
-    </section> -->
+      <div class="about__card">
+        <div class="card__icon icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+            />
+          </svg>
+        </div>
+
+        <div class="card__text">
+          <h2 class="card__text1">Quick and Reliable</h2>
+          <p class="card__text2">
+            With our large fleet of enclosed and open auto carriers, we provide
+            quick and reliable vehicle transportation across the U.S. and
+            Canada.
+          </p>
+        </div>
+      </div>
+    </section>
     <!-- about ends -->
 
     <!-- footer starts -->
