--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="slider__container">
       <div
         class="slider"
-        style="--width: 200px; --height: 175px; --quantity: 10"
+        style="--width: 200px; --height: 200px; --quantity: 10"
       >
         <div class="slider__list">
           <div class="slider__item" style="--position: 1">
@@ -114,7 +114,7 @@
       <div
         class="slider"
         reverse="true"
-        style="--width: 200px; --height: 148px; --quantity: 10"
+        style="--width: 200px; --height: 200px; --quantity: 10"
       >
         <div class="slider__list">
           <div class="slider__item" style="--position: 1">
@@ -183,7 +183,7 @@
           </p>
         </div>
       </div>
-      <div class="about__card">
+      <!-- <div class="about__card">
         <div class="card__icon icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -208,7 +208,7 @@
             Canada.
           </p>
         </div>
-      </div>
+      </div> -->
     </section>
     <!-- about ends -->
 
