--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
     <!-- hero starts -->
     <section class="hero container">
       <div class="hero__text">
-        <h1 class="hero__text1">
-          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
-        </h1>
+        <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
 
         <p class="hero__text2">
           With <span>Unmatched Dedication</span> to Continuous Improvement and
@@ -89,7 +87,7 @@
             <img src="/public/imgs/img6.jpg" alt="" />
           </div>
           <div class="slider__item" style="--position: 4">
-            <img src="/public/imgs/img7.jpg" alt="" />
+            <img src="/public/imgs/img7.JPG" alt="" />
           </div>
           <div class="slider__item" style="--position: 5">
             <img src="/public/imgs/img8.jpg" alt="" />
@@ -154,9 +152,33 @@
 
     <!-- about starts -->
     <section class="about container">
-      <!-- <div class="about__img-container">
-        <img src="/public/imgs/img9.jpg" alt="" />
-      </div> -->
+      <div class="about__card">
+        <div class="card__icon icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+            />
+          </svg>
+        </div>
+
+        <div class="card__text">
+          <h2 class="card__text1">Quick and Reliable</h2>
+          <p class="card__text2">
+            With our large fleet of enclosed and open auto carriers, we provide
+            quick and reliable vehicle transportation across the U.S. and
+            Canada.
+          </p>
+        </div>
+      </div>
+      <div class="about__img-container"></div>
       <div class="about__card">
         <div class="card__icon icon">
           <svg
@@ -175,40 +197,14 @@
         </div>
 
         <div class="card__text">
-          <h2 class="card__text1">Quick and Reliable</h2>
+          <h2 class="card__text1">Experienced Services</h2>
           <p class="card__text2">
-            With our large fleet of enclosed and open auto carriers, we provide
-            quick and reliable vehicle transportation across the U.S. and
-            Canada.
+            We have a unique focus on transporting engineering and prototype
+            vehicles. We also have extensive experience in moving autonomous
+            vehicles, ensuring their safe and efficient delivery.
           </p>
         </div>
       </div>
-      <!-- <div class="about__card">
-        <div class="card__icon icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-            />
-          </svg>
-        </div>
-
-        <div class="card__text">
-          <h2 class="card__text1">Quick and Reliable</h2>
-          <p class="card__text2">
-            With our large fleet of enclosed and open auto carriers, we provide
-            quick and reliable vehicle transportation across the U.S. and
-            Canada.
-          </p>
-        </div>
-      </div> -->
     </section>
     <!-- about ends -->
 
