--- a/index.html
+++ b/index.html
@@ -54,22 +54,6 @@
     </header>
     <!-- header ends -->
 
-    <!-- hero starts -->
-    <section class="hero container">
-      <div class="hero__text">
-        <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
-
-        <p class="hero__text2">
-          With <span>Unmatched Dedication</span> to Continuous Improvement and
-          <span>Customer Satisfaction.</span>
-        </p>
-      </div>
-      <a class="hero__btn1 btn" href="contact">Learn More</a>
-      <a class="hero__btn2 btn" href="about">Contact Us</a>
-      <!-- <img class="hero__logo" src="/public/logo.png" alt="" /> -->
-    </section>
-    <!-- hero ends -->
-
     <!-- slider starts -->
     <div class="slider__container">
       <div
@@ -150,8 +134,24 @@
     </div>
     <!-- slider ends -->
 
+    <!-- hero starts -->
+    <section class="hero container">
+      <div class="hero__text">
+        <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
+
+        <p class="hero__text2">
+          With <span>Unmatched Dedication</span> to Continuous Improvement and
+          <span>Customer Satisfaction.</span>
+        </p>
+      </div>
+      <a class="hero__btn1 btn" href="contact">Learn More</a>
+      <a class="hero__btn2 btn" href="about">Contact Us</a>
+    </section>
+    <!-- hero ends -->
+
     <!-- about starts -->
     <section class="about container">
+      <img class="about__logo" src="/public/logo.png" alt="" />
       <div class="about__card">
         <div class="card__icon icon">
           <svg
