--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <nav>
         <ul class="header__menu">
           <li>
-            <a class="header__link" href="#home">Home</a>
+            <a class="header__link" href="#about">About Us</a>
           </li>
           <li>
-            <a class="header__link" href="#about">About</a>
+            <a class="header__link" href="#gallery">Gallery</a>
           </li>
           <li>
             <a class="header__link" href="#contact">Contact</a>
@@ -58,7 +58,7 @@
     <div class="slider__container">
       <div
         class="slider"
-        style="--width: 200px; --height: 190px; --quantity: 10"
+        style="--width: 200px; --height: 170px; --quantity: 10"
       >
         <div class="slider__list">
           <div class="slider__item" style="--position: 1">
@@ -144,7 +144,7 @@
           <span>Customer Satisfaction.</span>
         </p>
       </div>
-      <a class="hero__btn1 btn" href="contact">Learn More</a>
+      <a class="hero__btn1 btn" href="contact">Explore More</a>
       <a class="hero__btn2 btn" href="about">Contact Us</a>
     </section>
     <!-- hero ends -->
