--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
     <!-- hero starts -->
     <section class="hero container">
       <div class="hero__text">
+        <!-- <h1 class="hero__text1">
+          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
+        </h1> -->
         <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
 
         <p class="hero__text2">
