--- a/index.html
+++ b/index.html
@@ -148,14 +148,15 @@
           <span>Customer Satisfaction.</span>
         </p>
       </div>
-      <a class="hero__btn1 btn" href="contact">Explore More</a>
+      <a class="hero__btn1 btn" href="contact">Explore</a>
       <a class="hero__btn2 btn" href="about">Contact Us</a>
     </section>
     <!-- hero ends -->
 
     <!-- about starts -->
     <section class="about container">
-      <img class="about__logo" src="/public/logo.png" alt="" />
+      <img class="about__logo" src="/public/logo.svg" alt="" />
+      <!-- <img class="about__logo" src="/public/logo.png" alt="" /> -->
       <div class="about__card">
         <div class="card__icon icon">
           <svg
