--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- about starts -->
     <section class="about container">
       <!-- <img class="about__logo" src="/public/logo.svg" alt="" /> -->
-      <!-- <img class="about__logo" src="/public/logo.png" alt="" /> -->
+      <img class="about__logo" src="/public/logo.png" alt="" />
       <div class="about__card">
         <div class="card__icon icon">
           <svg
