--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <span>Customer Satisfaction.</span>
         </p>
       </div>
-      <a class="hero__btn1 btn" href="contact">Explore</a>
+      <a class="hero__btn1 btn" href="contact">Read More</a>
       <a class="hero__btn2 btn" href="about">Contact Us</a>
     </section>
     <!-- hero ends -->
