--- a/index.html
+++ b/index.html
@@ -155,83 +155,95 @@
 
     <!-- about starts -->
     <section class="about container">
-      <!-- <img class="about__logo" src="/public/logo.svg" alt="" /> -->
-      <img class="about__logo" src="/public/logo.png" alt="" />
-      <div class="about__card">
-        <div class="card__icon icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-            />
-          </svg>
-        </div>
+      <h3 class="about__title">
+        <span>About</span> Gorban Transportation Inc.
+      </h3>
+      <!-- <img class="about__logo" src="/public/logo.png" alt="" /> -->
+      <div class="about__holder">
+        <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
+        <div class="about__card">
+          <div class="card__icon icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+              />
+            </svg>
+          </div>
 
-        <div class="card__text">
-          <h2 class="card__text1">Quick and Reliable</h2>
-          <p class="card__text2">
-            With our large fleet of enclosed and open auto carriers, we provide
-            quick and reliable vehicle transportation across the U.S. and
-            Canada.
-          </p>
-        </div>
-      </div>
-      <div class="about__card">
-        <div class="card__icon icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
-            />
-          </svg>
-        </div>
-
-        <div class="card__text">
-          <h2 class="card__text1">Prototype Focused</h2>
-          <p class="card__text2">
-            We have a unique focus on transporting engineering and prototype
-            vehicles.
-          </p>
+          <div class="card__text">
+            <h2 class="card__text1">Quick and Reliable</h2>
+            <p class="card__text2">
+              With our large fleet of enclosed and open auto carriers, we
+              provide quick and reliable vehicle transportation across the U.S.
+              and Canada.
+            </p>
+          </div>
         </div>
       </div>
 
-      <div class="about__card">
-        <div class="card__icon icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z"
-            />
-          </svg>
-        </div>
+      <div class="about__holder">
+        <img class="about__img" src="/public/imgs/img3.jpg" alt="" />
+        <div class="about__card">
+          <div class="card__icon icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
+              />
+            </svg>
+          </div>
 
-        <div class="card__text">
-          <h2 class="card__text1">Safe and Efficient</h2>
-          <p class="card__text2">
-            We have extensive experience in moving autonomous vehicles, ensuring
-            their safe and efficient delivery.
-          </p>
+          <div class="card__text">
+            <h2 class="card__text1">Prototype Focused</h2>
+            <p class="card__text2">
+              We have a unique focus on transporting engineering and prototype
+              vehicles.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="about__holder">
+        <img class="about__img" src="/public/imgs/img11.jpg" alt="" />
+        <div class="about__card">
+          <div class="card__icon icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z"
+              />
+            </svg>
+          </div>
+
+          <div class="card__text">
+            <h2 class="card__text1">Safe and Efficient</h2>
+            <p class="card__text2">
+              We have extensive experience in moving autonomous vehicles,
+              ensuring their safe and efficient delivery.
+            </p>
+          </div>
         </div>
       </div>
     </section>
