--- a/index.html
+++ b/index.html
@@ -153,12 +153,18 @@
     </section>
     <!-- hero ends -->
 
+    <div class="hero__logo">
+      <video autoplay muted loop id="background-video">
+        <source src="/public/hero-bg-video.mp4" type="video/mp4" />
+      </video>
+      <img src="/public/logo.png" alt="Logo" />
+    </div>
+
     <!-- about starts -->
     <section class="about container">
       <h3 class="about__title">
         <span>About</span> Gorban Transportation Inc.
       </h3>
-      <!-- <img class="about__logo" src="/public/logo.png" alt="" /> -->
       <div class="about__holder">
         <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
         <div class="about__card">
