--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <div class="hero__logo">
       <video autoplay muted loop id="background-video">
-        <source src="/public/hero-bg-video.mp4" type="video/mp4" />
+        <source src="/public/hero-bg-video2.mp4" type="video/mp4" />
       </video>
       <img src="/public/logo.png" alt="Logo" />
     </div>
