--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <!-- hero ends -->
 
     <div class="hero__logo">
-      <video autoplay muted loop id="background-video">
+      <video playsinline autoplay muted loop id="background-video">
         <source src="/public/hero-bg-video2.mp4" type="video/mp4" />
       </video>
       <img src="/public/logo.png" alt="Logo" />
