--- a/index.html
+++ b/index.html
@@ -159,9 +159,7 @@
 
     <!-- about starts -->
     <section class="about container">
-      <h3 class="about__title">
-        <span>About</span> Gorban Transportation Inc.
-      </h3>
+      <h3 class="about__title">About</h3>
       <div class="about__holder">
         <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
         <div class="about__card">
