--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
         <!-- <h1 class="hero__text1">
           Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
         </h1> -->
-        <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
+        <h1 class="hero__text1">Gorban Transportation</h1>
 
         <p class="hero__text2">
-          With <span>Unmatched Dedication</span> to Continuous Improvement and
-          <span>Customer Satisfaction.</span>
+          Transporting Excotiv and Luxury Vehicles with Unmatched Dedication to
+          Continuous Improvement and Customer Satisfaction.
         </p>
       </div>
       <a class="hero__btn1 btn" href="contact">Read More</a>
@@ -153,13 +153,16 @@
     </section>
     <!-- hero ends -->
 
-    <div class="hero__logo">
+    <!-- <div class="hero__logo">
       <img src="/public/logo.png" alt="" />
-    </div>
+    </div> -->
 
     <!-- about starts -->
     <section class="about container">
-      <h3 class="about__title">About</h3>
+      <div class="about__title">
+        <h3 class="about__text1">About</h3>
+        <h4 class="about__text2">Gorban Transportation Inc.</h4>
+      </div>
       <div class="about__holder">
         <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
         <div class="about__card">
