--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
         <h1 class="hero__text1">Gorban Transportation</h1>
 
         <p class="hero__text2">
-          Transporting Excotiv and Luxury Vehicles with Unmatched Dedication to
-          Continuous Improvement and Customer Satisfaction.
+          Transporting Exotic</span> and Luxury</span> Vehicles with
+          Unmatched Dedication to Continuous Improvement and
+          Customer Satisfaction.
         </p>
       </div>
       <a class="hero__btn1 btn" href="contact">Read More</a>
@@ -153,9 +154,9 @@
     </section>
     <!-- hero ends -->
 
-    <!-- <div class="hero__logo">
+    <div class="hero__logo">
       <img src="/public/logo.png" alt="" />
-    </div> -->
+    </div>
 
     <!-- about starts -->
     <section class="about container">
